Functional with mvvm cross

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+    <None Remove="DI\" />
+    <None Remove="ViewModels\" />
+    <None Remove="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DI\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MvvmCross" Version="7.1.2" />
   </ItemGroup>
 </Project>
