--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,11 +8,13 @@
     <None Remove="DI\" />
     <None Remove="ViewModels\" />
     <None Remove="Services\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DI\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="7.1.2" />
