--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -12,6 +12,7 @@
     <None Remove="Services\" />
     <None Remove="Models\" />
     <None Remove="Repositories\" />
+    <None Remove="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DI\" />
@@ -19,9 +20,11 @@
     <Folder Include="Services\" />
     <Folder Include="Models\" />
     <Folder Include="Repositories\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="7.1.2" />
     <PackageReference Include="System.Net.Http.Json" Version="7.0.1" />
+    <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.11.982" />
   </ItemGroup>
 </Project>
