--- a/MvvmExampleiOS/MvvmExampleiOS.csproj
+++ b/MvvmExampleiOS/MvvmExampleiOS.csproj
@@ -69,6 +69,15 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />
+      <PackageReference Include="MvvmCross.Plugin.DownloadCache">
+        <Version>5.7.0</Version>
+      </PackageReference>
+      <PackageReference Include="MvvmCross.Binding">
+        <Version>5.7.0</Version>
+      </PackageReference>
+      <PackageReference Include="MvvmCross.Plugin.File">
+        <Version>7.0.1</Version>
+      </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json">
@@ -152,7 +161,10 @@
         </Compile>
         <Compile Include="LinkerPleaseInclude.cs" />
         <Compile Include="Setup.cs" />
-        <Compile Include="NetworkIndicatorTargetBinding.cs" />
+        <Compile Include="Views\DetailViewController.cs" />
+        <Compile Include="Views\DetailViewController.designer.cs">
+          <DependentUpon>DetailViewController.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Core\Core.csproj">
